# build-orchestrator

./: README.md  pyproject.toml
benchmarks/results/: latest.json
docs/: ARCHITECTURE.md
examples/: demo_graph.json
scripts/: benchmark.py
src/build_orchestrator/: __init__.py  cli.py  graph.py  planner.py
tests/: test_planner.py
