[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "build-orchestrator"
version = "0.1.0"
description = "Deterministic build graph planner and cache-key scaffold."
requires-python = ">=3.11"
authors = [{ name = "Annsh Navle" }]

[project.scripts]
build-orchestrator = "build_orchestrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

